[metadata]
name = cdwlib
summary = Characterization & Data Quality of CDW, CDM and i2b2 data at HSSC
description-file = README.md
author = Venkat Kaushik
author-email = higgsmass@gmail.com
classifier =
    Environment :: HSSC 
    Intended Audience :: Information Technology
    Intended Audience :: Software Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = cdwlib
